# zec-wallet-rescue

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RELEASE_SIGNING.md  TERMS_OF_SERVICE.md  TESTING.md  TESTING_PLAN.md  ZECK_WALLET_LIGHT_RECOVERY_SPEC.md  deny.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml  zizmor.yml
crates/zeck-cli/: Cargo.toml
crates/zeck-cli/src/: main.rs
crates/zeck-core/: Cargo.toml  build.rs
crates/zeck-core/src/: address.rs  birthday.rs  cache.rs  derivation.rs  donation.rs  error.rs  fetcher.rs  lib.rs  lightwalletd.rs  models.rs  multi_seed.rs  scan.rs  scanner.rs  service.rs  workspace.rs
crates/zeck-core/tests/: multi_seed_integration.rs  regtest_integration.rs
crates/zeck-core/tests/common/: fake_lightwalletd.rs  mod.rs  regtest_harness.rs  subprocess_driver.rs  tcp_failover_proxy.rs
crates/zeck-core/tests/proto/: PROVENANCE.md  service.proto
docs/: THREAT_MODEL.md  index.html
docs/superpowers/plans/: 2026-05-27-donation-flow.md  2026-06-01-donation-tip-checkout.md
docs/superpowers/specs/: 2026-05-04-incomplete-session-detection-design.md  2026-05-04-multi-seed-scan-design.md  2026-05-12-tauri-js-surface-infographic-design.md  2026-05-27-donation-flow-design.md  2026-06-01-donation-tip-checkout-design.md
docs/superpowers/test-plans/: recovery-resilience.md
gui/: package-lock.json  package.json
gui/src/: index.html  main.js  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: commands.rs  main.rs
site/: CNAME  README.md  guide.html  index.html  styles.css
supply-chain/: config.toml
tests/regtest/: README.md  docker-compose.yml  lightwalletd-regtest.yaml  setup.sh  zcashd-regtest.conf
workers/: wrangler.toml
workers/.wrangler/cache/: wrangler-account.json
workers/src/: index.js
