[workspace]
members = ["crates/zeck-core", "crates/zeck-cli", "gui/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["ZECK contributors"]
rust-version = "1.85"
repository = "https://github.com/example/zeck"

[workspace.dependencies]
anyhow = "1.0.100"
bip0039 = "0.14.0"
clap = { version = "4.5.53", features = ["derive"] }
dialoguer = "0.12.0"
indicatif = "0.18.2"
orchard = "0.11.0"
rustls = { version = "0.23.37", features = ["ring"] }
secrecy = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.10.3" }
tauri-build = "2.5.6"
thiserror = "2.0.17"
time = { version = "0.3.22", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
zcash_address = "0.10.1"
zcash_client_backend = { version = "0.21.2", default-features = false, features = ["lightwalletd-tonic-transport", "lightwalletd-tonic-tls-webpki-roots"] }
zcash_keys = { version = "0.12.0", default-features = false, features = ["std", "sapling", "orchard", "transparent-inputs"] }
zcash_protocol = "0.7.2"
zcash_transparent = { version = "0.6.3", default-features = false, features = ["std", "transparent-inputs"] }
zip32 = "0.2.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
