[workspace]
members = ["crates/zeck-core", "crates/zeck-cli", "gui/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["ZECK contributors"]
rust-version = "1.86"
repository = "https://github.com/example/zeck"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bip0039 = "0.14.0"
clap = { version = "4.5.53", features = ["derive"] }
dialoguer = "0.12.0"
indicatif = "0.18.2"
orchard = "0.11.0"
prost = "0.14.3"
rand_core = "0.6.4"
rusqlite = "0.37.0"
rustls = { version = "0.23.37", features = ["ring"] }
secp256k1 = "0.29.1"
secrecy = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.10.3" }
tauri-build = "2.5.6"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tonic = "0.14.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
url = "2.5.8"
sha2 = "0.10"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
zcash_address = "0.10.1"
zcash_client_backend = { version = "0.21.2", default-features = false, features = ["lightwalletd-tonic-transport", "lightwalletd-tonic-tls-webpki-roots", "orchard", "sync", "transparent-inputs", "transparent-key-import"] }
zcash_client_sqlite = { version = "0.19.5", default-features = false, features = ["orchard", "transparent-inputs", "transparent-key-import"] }
zcash_keys = { version = "0.12.0", default-features = false, features = ["std", "sapling", "orchard", "transparent-inputs"] }
zcash_primitives = "0.26.4"
zcash_proofs = { version = "0.26.1", default-features = false, features = ["bundled-prover"] }
zcash_protocol = "0.7.2"
zcash_transparent = { version = "0.6.3", default-features = false, features = ["std", "transparent-inputs"] }
tempfile = "3.20.0"
zip32 = "0.2.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
