[package]
name = "argos-core"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[features]
# `argos-network` — opt-in support for talking to a private "Argos network"
# (a local zcashd-regtest + lightwalletd stack booted from tests/regtest/).
# When enabled, `validate_lightwalletd_network` accepts the `regtest` chain
# name as a synonym for testnet and skips the Sapling-activation-height
# check, so the C2 integration tests in tests/regtest_integration.rs can
# scan a deterministic local chain instead of public testnet.
#
# Deliberately a dev/test-only escape hatch: production builds compile this
# out, so a hostile mainnet lightwalletd cannot claim to be `regtest` to
# bypass network validation in a released Argos binary.
argos-network = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bip0039.workspace = true
keepawake.workspace = true
orchard.workspace = true
prost.workspace = true
rand_core.workspace = true
rusqlite.workspace = true
rustls.workspace = true
secp256k1.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
url.workspace = true
sha2.workspace = true
uuid.workspace = true
zcash_address.workspace = true
zcash_client_backend.workspace = true
zcash_client_sqlite.workspace = true
zcash_keys.workspace = true
zcash_primitives.workspace = true
zcash_proofs.workspace = true
zcash_protocol.workspace = true
zcash_transparent.workspace = true
zip32.workspace = true

[dev-dependencies]
tempfile.workspace = true
