[package]
name = "argos-gui"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
build = "build.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tokio.workspace = true
argos-core = { path = "../../crates/zeck-core" }
